feat(TGC-1292): New allowlist endpoint
