# src/plugins/router.js
@@ -2,6 +2,7 @@ import { health } from '../routes/health.js'
 import { applicationLockRelease, applicationLocksRelease } from '../modules/state/locks.routes.js'
 import { stateSave, stateRetrieve, stateDelete, statePatch } from '../modules/state/state.routes.js'
 import { addSubmission, retrieveSubmissions } from '../modules/state/submissions.routes.js'
+import { allowlistGrants } from '../modules/allowlist/allowlist.routes.js'
 
 const router = {
   plugin: {
@@ -16,7 +17,8 @@ const router = {
         retrieveSubmissions,
         statePatch,
         applicationLockRelease,
-        applicationLocksRelease
+        applicationLocksRelease,
+        allowlistGrants
       ])
     }
   }
